# GrabPic

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
apps/api/: package.json  tsconfig.json  wrangler.toml
apps/api/src/: index.ts
apps/api/src/lib/: event-cleanup.ts  logger.ts  sentry.ts
apps/api/src/routes/: events.ts  match.ts  qr.ts  upload.ts
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/.next/: trace
apps/web/.next/server/: server-reference-manifest.json  webpack-runtime.js
backend/: main.py
docs/: AGENTS.md  PRD.md  api-examples.md  deployment.md  progress.md  todo.md
docs/modularized_prd/: api_endpoints_contracts.md  competitive_landscape.md  database_schema_deep_dive.md  deployment_checklist.md  development_environment_setup.md  executive_summary.md  features_functionality.md  final_thoughts.md  goals_success_metrics.md  learning_resources.md  monetization_strategy.md  open_questions.md  privacy_compliance.md  processing_pipeline_details.md  risk_mitigation.md  self_oriented_goals.md  success_criteria.md  tech_stack_decisions.md  technical_architecture.md  timeline_milestones.md  user_personas_journey.md
ml/: processor.py  pyproject.toml  requirements.txt
tests/: 00-north-star.test.ts  01-processing-time.test.ts  02-api-latency.test.ts  03-event-throughput.test.ts  04-photo-throughput.test.ts  05-secondary-metrics.test.ts  06-contracts.test.ts  07-event-cleanup.test.ts
tests/helpers/: benchmark.ts  mock-db.ts  mock-env.ts  setup.ts
(+39 files in other folders)
