[project]
name = "grabpic-ml"
version = "0.1.0"
description = "Modal.com GPU serverless ML processing for GrabPic"
requires-python = ">=3.11"
dependencies = [
    "facenet-pytorch>=2.6.0",
    "libsql-client>=0.3.1",
    "modal>=1.3.2",
    "numpy>=1.26.4",
    "pillow>=10.2.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
]
